Fixed FB Like button flyout cutoff issue

--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -2675,7 +2675,7 @@ nav {
         @include clearfix();
         margin-top: 10px;
         iframe,span {
-          width: 88px !important;
+          //width: 88px !important;
         }
         #video-votes-ajax {
           margin-right: 10px;
